Fix issue with nav content bottom cut off

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -38,6 +38,11 @@ mat-sidenav-content{
   }
 }
 
+.mat-drawer-content {
+  height: 95% !important;
+  overflow-y: scroll !important;
+}
+
 .expanded {
   width: 250px;
   height: 300px;
